--- a/site/content/docs/5.0/examples/carousel/carousel.rtl.css
+++ b/site/content/docs/5.0/examples/carousel/carousel.rtl.css
@@ -29,7 +29,7 @@ body {
 .carousel-item > img {
   position: absolute;
   top: 0;
-  left: 0;
+  right: 0;
   min-width: 100%;
   height: 32rem;
 }
@@ -47,8 +47,8 @@ body {
   font-weight: 400;
 }
 .marketing .col-lg-4 p {
-  margin-right: .75rem;
   margin-left: .75rem;
+  margin-right: .75rem;
 }
 
 
@@ -63,8 +63,6 @@ body {
 .featurette-heading {
   font-weight: 300;
   line-height: 1;
-  /* rtl:remove */
-  letter-spacing: -.05rem;
 }
 
 
